Register default groups and users with the right permissions